<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Camlistore Uploader</string>
	<string name="settings_host_title">Camli Server Host/IP</string>
	<string name="settings_host_summary">e.g. &quot;example.com:3179&quot;</string>
	<string name="settings_password_title">Server password</string>
	<string name="pause_resume">Pause / Resume</string>
	<string name="pause">Pause</string>
	<string name="resume">Resume</string>
	<string name="stop">Stop</string>
	<string name="uploading">Uploading...</string>
	<string name="digesting">Digesting...</string>
	<string name="settings_auto">Auto-Upload</string>
	<string name="settings_auto_summary">Upload SD card files as created</string>
	<string name="blobs_remaining">Blobs Remaining: --</string>
	<string name="status_detail">[status detail]</string>
	<string name="blobs_uploaded">Blobs Uploaded</string>
	<string name="bytes_uploaded">Bytes Uploaded</string>
	<string name="settings">Settings</string>
	<string name="upload_all">Upload All</string>
</resources>